--- a/app/assets/stylesheets/12_post_show.scss
+++ b/app/assets/stylesheets/12_post_show.scss
@@ -113,6 +113,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
+  h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+  }
 }
 
 .post-show-user-picture{
@@ -120,6 +126,7 @@
   width: auto;
   border-radius: 50px;
   overflow: hidden;
+  margin-right: 15px;
 
   img{
     width: 100%;
@@ -128,6 +135,7 @@
 }
 
 .post-show-interactions {
+  margin-bottom: 15px;
 }
 
 #post-show-links {
