--- a/app/assets/stylesheets/13_profile_edit.scss
+++ b/app/assets/stylesheets/13_profile_edit.scss
@@ -200,7 +200,7 @@
 
 .profile-edit-buttons {
   font-size: 16px;
-  width: 50%;
+  width: 40%;
   height: 10%;
   margin-top: 25px;
   display: flex;
@@ -216,6 +216,11 @@
     cursor: pointer;
     color: blue;
   }
+}
+
+.cancel-button{
+  display: inline-block;
+  color: red;
 }
 
 .profile-edit-save {
