--- a/app/assets/stylesheets/10_user_profile.scss
+++ b/app/assets/stylesheets/10_user_profile.scss
@@ -127,6 +127,25 @@
   }
 }
 
+// this class needs to have 
+.profile-navigation{
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-bottom: 25px;
+
+  > a {
+    display: inline-block;
+    padding-bottom: 2px;
+  }
+}
+
+.selected{
+  border-bottom: 2px solid $pxBlueText;
+}
+
 .follow-button {
   margin: 0 auto;
   border-style: solid;
