--- a/app/assets/stylesheets/17_user_list.scss
+++ b/app/assets/stylesheets/17_user_list.scss
@@ -1,23 +1,50 @@
-.user-list{
+@import "./00_variables.scss";
+
+.user-list {
   width: 40%;
   height: 100%;
   margin: 0 auto;
 }
 
-.user-listing{
+.user-listing {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.user-listing-photo{
+.user-list-follow.following {
+  color: $pxBlueText;
+
+  &:hover:after{
+    color: red;
+    content: "Unfollow";
+  }
+
+  &:after {
+    content: "Following";
+  }
+}
+
+.user-list-follow.follow {
+  color: $pxBlueText;
+
+  &:hover{
+    color: lighten($pxBlueText, 10%);
+  }
+
+  &:after {
+    content: "Follow";
+  }
+}
+
+.user-listing-photo {
   width: 80px;
   height: 80px;
   border-radius: 50px;
   overflow: hidden;
 
-  > img{
+  > img {
     width: 100%;
     height: 100%;
   }
