--- a/app/assets/stylesheets/17_user_list.scss
+++ b/app/assets/stylesheets/17_user_list.scss
@@ -11,13 +11,36 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  text-align: center;
+
+  > div {
+    width: 33.333333%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.user-list-follow {
+  width: 120px;
+  height: 50px;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .user-list-follow.following {
-  color: $pxBlueText;
+  background-color: $pxBlueText;
+  color: white;
 
-  &:hover:after{
-    color: red;
+  &:hover{
+    background-color: red;
+  }
+
+  &:hover:after {
     content: "Unfollow";
   }
 
@@ -27,10 +50,11 @@
 }
 
 .user-list-follow.follow {
-  color: $pxBlueText;
+  background-color: $pxBlueText;
+  color: white;
 
-  &:hover{
-    color: lighten($pxBlueText, 10%);
+  &:hover {
+    background-color: lighten($pxBlueText, 10%);
   }
 
   &:after {
@@ -39,8 +63,8 @@
 }
 
 .user-listing-photo {
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   border-radius: 50px;
   overflow: hidden;
 
