--- a/app/assets/stylesheets/17_user_list.scss
+++ b/app/assets/stylesheets/17_user_list.scss
@@ -37,13 +37,13 @@
   background-color: white;
   // color: white;
 
-  &:hover{
+  &:hover {
     background-color: red;
     border: none;
   }
 
   &:hover:after {
-    color:white;
+    color: white;
     content: "Unfollow";
   }
 
@@ -68,10 +68,16 @@
 .user-listing-photo {
   width: 90px;
   height: 90px;
-  border-radius: 50px;
-  overflow: hidden;
 
-  > img {
+  > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    overflow: hidden;
+  }
+
+  img {
     width: 100%;
     height: 100%;
   }
