--- a/app/assets/stylesheets/08_image.scss
+++ b/app/assets/stylesheets/08_image.scss
@@ -38,7 +38,7 @@ $text-color: rgba(255, 255, 255, 0.7);
   display: none;
   position: absolute;
   top: 0;
-  // commented out because hover functionality will display the hover
+  // hover  will display the hover
   // display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -55,9 +55,7 @@ $text-color: rgba(255, 255, 255, 0.7);
   }
 
   .image-hover-bottom {
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0 10px 10px 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
