--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta name="description" content="A photography sharing website for users to
     like images and follow others." />
     
-    <meta name="title" property="og:title" content="500px" />
+    <meta name="title" property="og:title" content="pxClone" />
     <meta name="image" property="og:image" content="https://meta-previews.s3.us-west-1.amazonaws.com/home.png" />
     <meta name="description" property="og:description" content="A photography sharing website for users to
     like images and follow others." />
