--- a/app/assets/stylesheets/15_footer.scss
+++ b/app/assets/stylesheets/15_footer.scss
@@ -1,4 +1,4 @@
-footer{
+footer {
   width: 100%;
   height: 100px;
   display: flex;
@@ -7,13 +7,14 @@ footer{
   align-items: center;
   padding: 0 10%;
 
-  a {
+  .footer-link {
+    cursor: pointer;
     display: inline-block;
     width: 40px;
     height: 40px;
   }
 
-  img{
+  img {
     width: 100%;
     height: 100%;
   }
